[package]
name = "secure_shell"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
validator ={ version = "0.20.0", features = ["derive"] }
axum ={ version = "0.8.4", features = ["multipart"] }
axum-extra ={ version = "0.10.1", features = ["cookie"] }
tokio ={ version = "1.45.0", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
tower = "0.5.2"
time = "0.3.41"
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.19" }
aes = "0.8.4"
# black-modes = "0.9.1"
rsa = "0.9.8"
rand = "0.9.1"
base64 = "0.22.1"
